--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -519,10 +519,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define the function \"say_hello\" so it prints \"Hello!\" when called.\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the function.\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the function \"say_something\" so it prints whatever is passed as the variable when called.\n",
+    "def say_something(something):\n",
+    "    print(something)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the function.\n",
+    "say_something(\"Hello World\")"
+   ]
   }
  ],
  "metadata": {
